update home style
used free font
delete empty css file
update menu and background color

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Clothesest</title>
   <link rel="stylesheet" href="index.css" />
+  <link href='//cdn.webfont.youziku.com/webfonts/nomal/98834/46719/58aba5f1f629d81848de813f.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
 
